@@ -4,6 +4,10 @@ LIST OF CHANGES
  - cluster count check and p4stage1 functions use new class
    (npg_qc::illumina::interop::parser) to parse Illumina InterOp files
  - change npg_pipeline::product::release to use tertiary config
+ - new qc_interop function to run interop autoqc check
+ - simplification of the analysis function graph: number of mlwh
+   updates is reduced to two, one after stage 1 and interop autoqc
+   check and another towards the end of the flow
 
 release 57.6.0
  - only set p4 parameter values for markdup_method and
